--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,5 +11,5 @@ jobs:
       uses: peter-evans/repository-dispatch@v1
       with:
         token: ${{ secrets.PAT }}
-        repository: ali9issa99/Powerdown
+        repository: ali9issa99/Powerdown-Frontend
         event-type: update-submodules-event
