added workflows to the frontend

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,7 @@
-name: Notify Main Project
+name: Notify Update Submodules
 
-on: push
+on:
+  push:
 
 jobs:
   notify-main-project:
@@ -11,5 +12,5 @@ jobs:
       uses: peter-evans/repository-dispatch@v1
       with:
         token: ${{ secrets.PAT }}
-        repository: ali9issa99/Powerdown
+        repository: ali9issa99/Powerdown-Fullstack
         event-type: update-submodules-event
