added the icons as assets to the pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,10 @@ flutter:
   assets:
     - assets/tv.png
     - assets/google.png
+    - assets/icons/home.svg
+    - assets/icons/analytics.svg
+    - assets/icons/achievements.svg
+    - assets/icons/profile.svg
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
