added a plus icon to the pubspec.yaml file

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ flutter:
     - assets/icons/analytics.svg
     - assets/icons/achievements.svg
     - assets/icons/profile.svg
+    - assets/icons/plus.svg
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
