--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_sign_in: ^5.4.0
   flutter_svg: ^1.1.0
+  fl_chart: ^0.40.0
   
 
 dev_dependencies:
