--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  google_sign_in: ^5.4.0
-  flutter_svg: ^1.1.0
-  fl_chart: ^0.40.0
+  google_sign_in: ^6.2.1
+  flutter_svg: ^2.0.10+1
+  fl_chart: ^0.69.0
   
 
 dev_dependencies:
