--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   provider: ^6.1.2
   uuid: ^4.5.0 
   web_socket_channel: ^3.0.1
+  shared_preferences: ^2.0.13
   
 
 dev_dependencies:
